--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -1,37 +1,34 @@
-main {
-  display: flex;
-  flex-wrap: wrap;
+body {
+  padding: 90px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #742305;
 }
 
-article.article {
+.article {
   display: flex;
-  flex-direction: column;
-  /* diamo una forma alla card */
-  max-width: 300px;
-  margin: 1em;
-  border-radius: 10%;
-  background-color: #fbf7e3;
-  border: 0;
-  padding: 0.5em;
+  flex-wrap: wrap-reverse;
+
+  gap: 30px;
+
+  background-color: #fef7e2;
+  border-radius: 30px;
+  padding: 30px;
 }
 
 .article .article-content {
-  text-align: left;
-  line-height: 1.5;
-  padding: 1em;
-  /* faccio toccare il fondo al card-content anche se la mia card è più "corta" delle altre */
-  flex-grow: 1;
-  /* a questo punto il card-content toccherà sempre il fondo! lo rendo flessibile a sua volta in modo da poter spingere il bottone alla fine della card */
-  display: flex;
-  flex-direction: column;
+  flex: 1 1 400px;
+  line-height: 1.4;
 }
 
-.article .article-content img {
-  margin-top: 1.5em;
+article img {
+  flex: 1 1 500px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .article .article-content h2 {
   margin-bottom: 0.5em;
   font-weight: bold;
+  font-size: 1.5em;
   margin-top: 1em;
 }
